fix issue in header on mobile

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -39,6 +39,7 @@ header .v-divider {
     overflow: hidden;
     position: absolute;
     background: #F9F9F9;
+    z-index: 9;
 }
 
 .search-panel.show {
